Fix: height on mobile device

--- a/assets/CSS/output.css
+++ b/assets/CSS/output.css
@@ -618,8 +618,8 @@ h3 {
   height: 500vh;
 }
 
-.h-lvh {
-  height: 100lvh;
+.h-dvh {
+  height: 100dvh;
 }
 
 .h-screen {
